style.css
.header {
    background-color: #1F2937 ;
    display: flex;
    align-items: center;
    padding-top: 20px;
   
}

.right-links {
   display: flex; 
   margin-left: auto;
   font-size: 18px;
   gap: 20px;
   padding-right: 200px;
   align-self: center;

}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    padding-left: 200px;
    align-self: center;
    font-weight: 800;

}

a:link { text-decoration: none; }

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  a {
    color: #e5e7eb;
  }

.hero {
    display: flex;
    background-color:#1F2937;
   
    
    padding-top: 80px;
    padding-left: 200px;
    padding-bottom: 80px;
  }

.hero_text {
    display: flex;
    flex-wrap: wrap;
    width: 400px;
    
  }

  .title {
  font-size: 48px;
  font-weight:800;
  color: #F9FAF8;
}

.text {
  font-size: 18px;
  color: #e5e7eb;

}


.image {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-left: auto;
  padding-right: 300px;
}


button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #3382f6;
  padding: 10px;
  color: white;
  font-weight: bold;
  width: 100px;
}
  
.image img{
  width: 600px;

  

}


body {
  display: flex;
  flex-direction: column;
}

.button {
 
  padding-top: 10px;
 
}

.info {
  
  background-color: white;
  gap:52px;
  text-align: center;
  
}

.info_title {

  font-size: 36px;

  font-weight: 900;
  padding: 20px;


}

.container{
 
  gap: 70px;
  padding-bottom: 70px;
  display: flex;
  justify-content: center;
  

}

.image_text {
  padding-top: 50px;
  max-width: 200px;

}

.image_text img {
  width: 120px;
  height: 120px;
  
 }
 


 .textdistro {
  padding-top: 10px;
 }

.quote {
  display: flex;
  background-color:#E5E7EB ;
  justify-content: center;
  align-items: center;
  padding-left: 400px;
  padding-right: 400px;
  padding-top: 70px;
  padding-bottom: 70px;
  flex-wrap: wrap;
}

.quote_text {
 
  font-size: 36px;
  font-style: italic;
  color: #1F2937;

}


.signature {
 margin-left: auto;
 font-size: 24px;
 font-weight: bold;

}
.callto{
  display: flex;
  justify-content: center;
  margin-left:200px ;
  margin-right: 200px;
  margin-top: 80px;
  margin-bottom: 80px;
  background: #3382f6;
  align-items: center;
  padding-top: 30px;
  padding-bottom: 40px;
  border-radius: 10px;
  padding-left: 100px;
  flex-wrap: wrap;

}


.call_button button {
  border: #F9FAF8;
  border-style: solid;

 
}

.call_button {
  margin-left: auto;
  margin-right: 90px;
}

.calltext {
 
  max-width: 200px;
}

.call_title {
  color: #e5e7eb;
  font-weight: 800;
  font-size: 24px;

}

.call_description {
  color: #e5e7eb;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: center;

  padding: 20px;
  background-color: #1F2937;
  color: white;
  margin-top: auto;
}

